feat(member) : 프로젝트 멤버 목록 조회 inProgress 추가